oc/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: http-dns-delegate
  namespace: ocio-github-runners
spec:
  selector:
    app: http-dns-delegate
  ports:
    - port: 9001
      targetPort: 9001
